src/components/BracketPlayerRow/BracketPlayerRow.css
.matchup-player-container {
  display: flex;
  justify-content: space-between;
  gap: 10px;
  height: 20px;
  padding: 4px;
  border-radius: 10px;
  background-color: white;
  cursor: pointer;
  /* transition: background-color 0.3s ease-in-out; */
}
.matchup-player-container.is-winner {
  cursor: default;
}

.matchup-player-empty-container {
  height: 20px;
}

.matchup-player-details-container {
  display: flex;
  gap: 5px;
}

.matchup-player-won-button-container {
  display: none;
}

.matchup-player-container.show-winner-button:hover {
  background-color: #60e85668;
}

.matchup-player-container.show-winner-button:hover
  .matchup-player-won-button-container {
  display: block;
}

.matchup-player-container.is-winner .matchup-player-won-button-container {
  display: block;
}

.matchup-player-container.is-winner:hover {
  background-color: white;
}

